feat(wanwu): workflow template record
