# internal/bff-service/model/response/workflow.go
@@ -2,7 +2,6 @@ package response
 
 import (
 	"github.com/UnicomAI/wanwu/internal/bff-service/config"
-	"github.com/UnicomAI/wanwu/internal/bff-service/model/request"
 )
 
 type CozeWorkflowModelInfo struct {
@@ -117,33 +116,4 @@ type ToolActionParamWithTypeList4Workflow struct {
 type ToolActionParamInTypeList4Workflow struct {
 	Type     string        `json:"type"`
 	Children []interface{} `json:"schema"`
-}
-
-type GetWorkflowTemplateListResp struct {
-	Total        int64                  `json:"total"`
-	List         []WorkflowTemplateInfo `json:"list"`
-	DownloadLink DefaultTemplateURL     `json:"downloadLink"`
-}
-
-// WorkflowTemplateDetail 工作流模板详情响应
-type WorkflowTemplateDetail struct {
-	WorkflowTemplateInfo
-	Summary  string `json:"summary"`  // 模板介绍概览
-	Feature  string `json:"feature"`  // 模板特性说明
-	Scenario string `json:"scenario"` // 模板应用场景
-}
-
-// WorkflowTemplateListItem 工作流模板列表项
-type WorkflowTemplateInfo struct {
-	TemplateId    string         `json:"templateId"`    // 模板ID
-	Avatar        request.Avatar `json:"avatar"`        // 图标
-	Name          string         `json:"name"`          // 模板名称
-	Description   string         `json:"description"`   // 模板描述
-	Category      string         `json:"category"`      // 模板分类
-	Author        string         `json:"author"`        // 作者
-	DownloadCount int32          `json:"downloadCount"` // 下载次数
-}
-
-type DefaultTemplateURL struct {
-	TemplateURL string `json:"templateUrl"`
 }
