# internal/bff-service/server/http/handler/router/v1/common.go
@@ -68,4 +68,9 @@ func registerCommon(apiV1 *gin.RouterGroup) {
 	mid.Sub("common").Reg(apiV1, "/appspace/app/openurl", http.MethodPut, v1.AppUrlUpdate, "编辑应用Url")
 	mid.Sub("common").Reg(apiV1, "/appspace/app/openurl/list", http.MethodGet, v1.GetAppUrlList, "获取应用Url列表")
 	mid.Sub("common").Reg(apiV1, "/appspace/app/openurl/status", http.MethodPut, v1.AppUrlStatusSwitch, "启用/停用应用Url")
+
+	// 工作流模板统计
+	mid.Sub("common").Reg(apiV1, "/workflow/template/statistic", http.MethodGet, v1.GetWorkflowTemplateStatistic, "获取工作流模板统计")
+	mid.Sub("common").Reg(apiV1, "/client/statistic", http.MethodGet, v1.GetClientStatistic, "获取使用工作流模板客户端统计")
+	mid.Sub("common").Reg(apiV1, "/client/statistic/cumulative", http.MethodGet, v1.GetCumulativeClientStatistic, "获取累计使用工作流模板客户端统计")
 }
